
  [ Eugenio Paolantonio (g7) ]
  * debian/, setup.cfg:
    - Ship to /usr/share/linstaller.
  * debian/alan-ext-linstaller.install, setup.py:
    - Install alan extension in /usr/share/alan.
  * setup.py:
    - Do not ship playground configuration anymore. 
    - Ship semplice-nolive configuration.
  * debian/linstaller-config-semplice.install:
    - Ship semplice-nolive.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Wed, 31 Aug 2011 19:21:10 +0200

linstaller (1.51.0~pre3-1) emily; urgency=low

  * partdisks: library: added is_disk() and device_sort() functions
  * partdisks: library: return_device() correctly works on freespace
    partitions.
  * partdisks: use device_sort() to return a sorted list of what we
    should commit.
  * partdisks: set touched in automatic partitioning.
  * partdisks: do not format if, in interactive editor, swap is selected
    but swap_noformat preseed is true.
  * partdisks: inst: in revert, check for key "partdisks.inst" AND if any,
    revert used.
  * partdisks: inst: fixed get of "changed".
  * partdisks: "Go back" is now fixed.
  * partdisks: do not clear touched and changes when returning to self.main()
  * partdisks: in main() reload structure, but not remove "useas".

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sat, 20 Aug 2011 11:31:04 +0200

linstaller (1.51.0~pre2-1) emily; urgency=low

  * linstaller_wrapper.sh: launch linstaller with sudo
  * partdisks: added a missing )
  * linstaller_alan.py: fixed command
  * partdisks: do not process freespace (/dev/sdx-1) partitions
  * partdisks: do not ask for filesystem when adding a partition; the user
    should add one later.
  * partdisks: library: support for partitions with None filesystem.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 18 Aug 2011 17:21:38 +0200

linstaller (1.51.0~pre1-1) emily; urgency=low

  * Added alan extension and its relevant alan-ext-linstaller package
  * New wrapper for linstaller that displays "Press ENTER to close" if