@@ -3,10 +3,21 @@
 # This file was automatically generated by stdeb 0.6.0+git at
 # Tue, 05 Jul 2011 21:32:34 +0200
 
+# This has to be exported to make some magic below work.
+export DH_OPTIONS
+
+LOCALES_DIR = $(CURDIR)/debian/tmp/usr/share/locale
+
 %:
 	dh $@ --with python2
 
 override_dh_auto_install:
-	python2.7 setup.py install --root=debian/tmp --install-layout=deb --install-lib=/usr/lib/linstaller --install-scripts=/usr/lib/linstaller
+	python2.7 setup.py install --root=debian/tmp --install-layout=deb --install-lib=/usr/share/linstaller --install-scripts=/usr/share/linstaller
 
-override_dh_auto_build:
+	# Borrowed from clamtk source package, thank you all
+	@echo Installing locales now...
+	for locale in $(shell ls $(CURDIR)/lang/linstaller/*.mo | sed 's@.*/\(.*\)\.mo@\1@g'); \
+		do mkdir -p $(LOCALES_DIR)/$$locale/LC_MESSAGES/ && \
+		install -m 644 $(CURDIR)/lang/linstaller/$$locale.mo $(LOCALES_DIR)/$$locale/LC_MESSAGES/linstaller.mo; \
+	done
+	-rm -rf $(LOCALES_DIR)/linstaller/
